Cambio de rutas, inclusión de clases de pago y correción de IDs

--- a/Guaguero.Domain/Guaguero.Domain.csproj
+++ b/Guaguero.Domain/Guaguero.Domain.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\Infraestructure\Internal\" />
+    <Folder Include="Interfaces\Infraestructure\External\" />
+    <Folder Include="Interfaces\PersistenceInterfaces\" />
   </ItemGroup>
 
 </Project>
