--- a/Guaguero.Persistence/Guaguero.Persistence.csproj
+++ b/Guaguero.Persistence/Guaguero.Persistence.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Base\" />
+    <Folder Include="Configuratiosn\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
