Corrección de los enums

--- a/Guaguero.Application/Guaguero.Application.csproj
+++ b/Guaguero.Application/Guaguero.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Queries\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Guaguero.Domain\Guaguero.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
