--- a/Guaguero.Persistence/Guaguero.Persistence.csproj
+++ b/Guaguero.Persistence/Guaguero.Persistence.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Guaguero.Application\Guaguero.Application.csproj" />
+  </ItemGroup>
+
 </Project>
