Agregado: Strategist e interfaces de repositorios requeridos

--- a/Guaguero.Application/Guaguero.Application.csproj
+++ b/Guaguero.Application/Guaguero.Application.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <Folder Include="Commands\Route\" />
+    <Folder Include="Commands\Sindicato\" />
     <Folder Include="Events\" />
     <Folder Include="Behaviors\" />
     <Folder Include="DTOs\" />
     <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
