--- a/Guaguero.Domain/Guaguero.Domain.csproj
+++ b/Guaguero.Domain/Guaguero.Domain.csproj
@@ -8,9 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\Infraestructure\External\" />
-    <Folder Include="Interfaces\PersistenceInterfaces\Logistic\" />
-    <Folder Include="Interfaces\PersistenceInterfaces\Users\" />
-    <Folder Include="Interfaces\PersistenceInterfaces\Sindicatos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
