--- a/Guaguero.API/Guaguero.API.csproj
+++ b/Guaguero.API/Guaguero.API.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Hubs\" />
+    <ProjectReference Include="..\Guaguero.Application\Guaguero.Application.csproj" />
   </ItemGroup>
 
 </Project>
