Agregando Contexto de EF Core y Configuraciones de tipos

--- a/Guaguero.Persistence/Guaguero.Persistence.csproj
+++ b/Guaguero.Persistence/Guaguero.Persistence.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Base\" />
     <Folder Include="Configuratiosn\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Repositories\Logistic\" />
+    <Folder Include="Repositories\Sindicatos\" />
+    <Folder Include="Repositories\Users\" />
   </ItemGroup>
 
   <ItemGroup>
