--- a/Guaguero.API/Guaguero.API.csproj
+++ b/Guaguero.API/Guaguero.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Guaguero.Application\Guaguero.Application.csproj" />
+    <ProjectReference Include="..\Guaguero.InOC\Guaguero.InOC.csproj" />
   </ItemGroup>
 
 </Project>
