--- a/Guaguero.Infraestructure/Guaguero.Infraestructure.csproj
+++ b/Guaguero.Infraestructure/Guaguero.Infraestructure.csproj
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Guaguero.API\Guaguero.API.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Guaguero.Application\Guaguero.Application.csproj" />
   </ItemGroup>
 
