Actualizacion del Hub e inclusión del controlador de viaje

--- a/Guaguero.API/appsettings.Development.json
+++ b/Guaguero.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DBGuaguero": "Server=(local);Database=DBGuaguero;Integrated Security=true;TrustServerCertificate=True"
   }
 }
