--- a/Guaguero.API/appsettings.json
+++ b/Guaguero.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DBGuaguero": "Server=(local);Database=DBGuaguero;Integrated Security=true; TrustServerCertificate=True",
   "AllowedHosts": "*"
 }
